@@ -1,3 +1,7 @@
+2004-02-08  Joseph S. Myers  <jsm@polyomino.org.uk>
+
+	* gcc.dg/c90-init-1.c: Adjust expected error messages.
+
 2004-02-08  Eric Botcazou  <ebotcazou@libertysurf.fr>
 
 	* g++.dg/eh/simd-2.C: Adjust line numbers for SPARC.
